--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="./img/pops.jpg" type="image/jpeg"
     <link rel="stylesheet" href="./css/style.css">
     <title>Tribute to my Dad</title>
 </head>
 <body>
-    <div class="title">
+    <div class="header">
         <h1 class="name">Rev. Dr. 'Dare Ogunleye</h1>
         <h4 class="att">Father and Mentor</h4>
         <img src="./img/pops.jpg" alt="pops" class="img">
     </div>
+    <div class="maindiv">
     <p class="write-up">
         You will always be my best friend, my greatest mentor, my motivation and my deepest roots. Your perpetual belief 
         in my limitless potentials empowers me everyday. My love for you is endless. I'm eternally grateful for the 
@@ -24,8 +26,9 @@
     </p>
     <img src="./img/pops2.jpg" alt="picture" class="img2">
     <img src="./img/pops3.jpg" alt="picture" class="img3">
-    <footer class="footer">
-        <p>&copy; 2020 Tribute page. Developed by Miracle Ogunleye</p>
-    </footer>
+    </div>
 </body>
+<footer class="footer">
+    <p>&copy; 2020 Tribute page. Developed by Miracle Ogunleye</p>
+</footer>
 </html>
