--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="./img/pops.jpg" type="image/jpeg"
+    <link rel="shortcut icon" href="./img/pops.jpg" type="image/jpeg">
     <link rel="stylesheet" href="./css/style.css">
     <title>Tribute to my Dad</title>
 </head>
